methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:26: error: ';' expected but 'else' found.
    else {
    ^FlowerCase:31: error: expected class or object definition
  createFlower(c);
  ^FlowerCase:33: error: eof expected but '}' found.
}
^